[gd_scene load_steps=6 format=2]

[ext_resource path="res://player1.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 27.4591

[sub_resource type="CircleShape2D" id=3]
radius = 16.0312

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 82, 88 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="passArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="passArea"]
polygon = PoolVector2Array( 12, 10, 12, -10, 300, -50, 300, 50 )

[node name="defenseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="defenseArea"]
shape = SubResource( 2 )

[node name="shootArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shootArea"]
position = Vector2( 25, 0 )
shape = SubResource( 3 )

[node name="reloadTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="hurtCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="passArea" to="." method="_on_passArea_body_entered"]
[connection signal="body_exited" from="passArea" to="." method="_on_passArea_body_exited"]
[connection signal="body_entered" from="defenseArea" to="." method="_on_defenseArea_body_entered"]
[connection signal="body_exited" from="defenseArea" to="." method="_on_defenseArea_body_exited"]
[connection signal="body_entered" from="shootArea" to="." method="_on_shootArea_body_entered"]
[connection signal="body_exited" from="shootArea" to="." method="_on_shootArea_body_exited"]
[connection signal="timeout" from="reloadTimer" to="." method="_on_reloadTimer_timeout"]
[connection signal="timeout" from="hurtCooldown" to="." method="_on_hurtCooldown_timeout"]
